// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHmrProxy default-export 1`] = `
"import {
    default
} from '/default-export.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _default = default;

export {
    _default as default
};

client.onUpdate(\\"/default-export.mjs\\", (updated) => {
    _default = updated.default;
});"
`;

exports[`generateHmrProxy multiple-named-exports 1`] = `
"import {
    a
    b
    c
} from '/multiple-named-exports.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _a = a;
let _b = b;
let _c = c;

export {
    _a as a
    _b as b
    _c as c
};

client.onUpdate(\\"/multiple-named-exports.mjs\\", (updated) => {
    _a = updated.a;
    _b = updated.b;
    _c = updated.c;
});"
`;

exports[`generateHmrProxy named-class-export.js 1`] = `
"import {
    C
} from '/named-class-export.js?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _C = C;

export {
    _C as C
};

client.onUpdate(\\"/named-class-export.js\\", (updated) => {
    _C = updated.C;
});"
`;

exports[`generateHmrProxy named-export-alias 1`] = `
"import {
    b
} from '/named-export-alias.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _b = b;

export {
    _b as b
};

client.onUpdate(\\"/named-export-alias.mjs\\", (updated) => {
    _b = updated.b;
});"
`;

exports[`generateHmrProxy named-function-declaration 1`] = `
"import {
    f
} from '/named-function-declaration.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _f = f;

export {
    _f as f
};

client.onUpdate(\\"/named-function-declaration.mjs\\", (updated) => {
    _f = updated.f;
});"
`;

exports[`generateHmrProxy named-multiple-var-declarations 1`] = `
"import {
    a
    b
    c
} from '/named-multiple-var-declarations.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _a = a;
let _b = b;
let _c = c;

export {
    _a as a
    _b as b
    _c as c
};

client.onUpdate(\\"/named-multiple-var-declarations.mjs\\", (updated) => {
    _a = updated.a;
    _b = updated.b;
    _c = updated.c;
});"
`;

exports[`generateHmrProxy named-single-export 1`] = `
"import {
    a
} from '/named-single-export.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _a = a;

export {
    _a as a
};

client.onUpdate(\\"/named-single-export.mjs\\", (updated) => {
    _a = updated.a;
});"
`;

exports[`generateHmrProxy named-single-var-declaration 1`] = `
"import {
    a
} from '/named-single-var-declaration.mjs?mtime=0';
import { client } from \\"/hmr-client.mjs\\";
let _a = a;

export {
    _a as a
};

client.onUpdate(\\"/named-single-var-declaration.mjs\\", (updated) => {
    _a = updated.a;
});"
`;

exports[`generateHmrProxy no-exports 1`] = `
"const a = 1;
"
`;
